# qbi2025-ex4-rudraravl

./: 04-Fossil.ipynb  README.md  hello.py  pyproject.toml  tasks.py  test_exercise4.py
.github/workflows/: classroom.yml
